# vertical-farm

./: .actrc  .env.example  .gitignore  .taskmasterconfig  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.html  MIGRATION_SUMMARY.html  Makefile  PIPELINE_OVERVIEW.html  PRE_COMMIT_SETUP.html  README.md  SECURITY.md  TONIGHT_SUMMARY.md  __init__.py  act-secrets.example  check_tables.sql  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  docker-compose.yml.legacy  hacs.json  index.html  manual_test_features.sh  mkdocs.yml  package-lock.json  run_integration_tests.sh  sitemap.xml  static-analysis.datadog.yml  test-all.sh  test-consolidated-migrations.sh  test_integration_features.py
.claude/: settings.json
.cursor/: modes.json
.github/: dependabot.yml  pull_request_template.md
.human/: call-agent.md  call-ui-ux-agent.md  create-pr.md  workflow.md
01-architecture/: LAYER_OVERLAY_SYSTEM.html  automation-architecture.html  backend.html  caching-strategy.html  database-schema.html  edge-computing.html  frontend.html  index.html  overview.html  responsibilities.html
02-development/: PHASE2_README.html  PHASE3_README.html  STYLE-INTEGRATION-PLAN.html  STYLE-STANDARDIZATION-PHASE1.html  STYLE-STANDARDIZATION-PHASE2.html  ci-cd-workflow.html  contributing.html  improvement-recommendations.html  index.html  release-notes.html
03-api/: index.html  reference.html
04-deployment/: PWA_IMPLEMENTATION.html  cloudflare-caching-guide.html  cloudflare-config.html  index.html  workflow.html
05-testing/: TESTING.html  index.html  production-testing-strategy.html  security-testing.html
06-security/: index.html  model.html
07-guides/: CACHING_IMPLEMENTATION_GUIDE.html  DARK-MODE-GUIDE.html  SETUP_HOME_ASSISTANT.html  SUPABASE_QUEUES_SETUP.html  index.html
08-reports/: index.html  ui-ux-design-evaluation.html
09-migration/: SEMANTIC-TOKEN-MIGRATION.html  index.html  postgrest-migration-guide.html
MIGRATION_GUIDE/: index.html
MIGRATION_SUMMARY/: index.html
PIPELINE_OVERVIEW/: index.html
PRE_COMMIT_SETUP/: index.html
agents/: README.md
api/: index.html
api-reference/: index.html
architecture/: index.html
architecture-challenges/: index.html
architecture-responsibilities/: index.html
architecture-summary/: index.html
archive/: index.html
backend/: .coverage  .dockerignore  .pre-commit-config.yaml  DOCKER_GUIDE.md  Dockerfile  Dockerfile.multistage  Dockerfile.optimized  README.md  SETUP_HOME_ASSISTANT.md  auth.py  coverage-api.xml  coverage-integration.xml  coverage-schemas.xml  coverage-unit.xml  datadog_init.py  main.py  models.py  pylint-report.txt  pyproject.toml  pyright-output.txt  pyrightconfig.json  pytest.ini  requirements.txt  requirements.txt.backup  routers.py  run_tests.sh  security-report.json  square_api_setup.md  supabase_client.py  test-results-api.xml  test-results-integration.xml  test-results-schemas.xml  test-results-unit.xml  test_connection_from_docker.py  test_home_assistant_connection.py
backend-architecture/: index.html
backend/app/: dependencies.py  main.py
backend/app/api/v1/: api.py  devices.py  grow_automation.py  sensors_cached.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  cache.py  fans.py  farm_automation.py  farms.py  home_assistant.py  items.py  login.py  racks.py  rows.py  sensor_devices.py  shelves.py  square.py  supabase_background_tasks.py  test_endpoints.py  user_permissions.py  users.py
backend/app/core/: cache.py  config.py  database.py  datadog_setup.py  password_utils.py  security.py
backend/app/crud/: __init__.py  crud_fan.py  crud_farm.py  crud_rack.py  crud_row.py  crud_sensor_device.py  crud_shelf.py  crud_user.py  crud_user_permission.py
backend/app/db/: __init__.py  supabase_client.py
backend/app/middleware/: cache_middleware.py
backend/app/models/: __init__.py  enums.py  farm.py  home_assistant.py  user.py  user_permission.py
backend/app/schemas/: __init__.py  device_schemas.py  fan.py  farm.py  grow_automation_schemas.py  rack.py  row.py  sensor.py  sensor_device.py  shelf.py  square.py  token.py  user.py  user_permission.py
backend/app/services/: __init__.py  background_processor_redis_deprecated.py  cache_service.py  database_service.py  device_monitoring_service.py  error_handling.py  farm_automation_service.py  grow_automation_service.py  home_assistant_background_tasks.py  home_assistant_client.py  home_assistant_service.py  sensor_cache_service.py  supabase_background_service.py  user_home_assistant_service.py
backend/app/tests/: README.md  conftest.py  test_home_assistant_endpoints.py  test_main.py
backend/app/tests/api/: __init__.py  test_home_assistant_devices.py  test_home_assistant_health.py  test_main_endpoints.py
backend/app/tests/integration/: __init__.py  test_background_queue_basic.py  test_integration_features.py
backend/app/tests/performance/: README.md  background-queue-test.py  baseline-without-cache-1749844181497.json  cloudflare-cache-performance-test.js  database-load-test.js  edge-functions-baseline-1749841586823.json  edge-functions-baseline-1749841935555.json  edge-functions-baseline-1749842752303.json  edge-functions-performance-test.js  no-cache-performance-test.js  simplified-no-cache-1749913926933.json
backend/app/tests/production_tests/: background-queue-test.py  cache-verification-test.js  edge-functions-baseline-1749842381991.json  edge-functions-baseline-1749844437582.json  edge-functions-baseline-1749913112212.json  edge-functions-baseline-1749914206366.json  performance_comparison_analysis.md  production-health-check.sh  run-baseline-test.js  simplified-no-cache-test.js
backend/app/tests/schemas/: test_fan_schemas.py  test_sensor_device_schemas.py
backend/app/tests/unit/: __init__.py  test_crud_operations.py
backend/tests/: test_main.py
ci-cd-workflow/: index.html
cloudflare/: README.md  config.example.toml  wrangler.toml
contributing-guide/: index.html
data-flow-diagram/: index.html
database-schema/: index.html
deployment/: index.html
deployment-workflow/: index.html
(+1461 files in other folders)
